Fixed some stuff for email verification